--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=c7193bbe616a825f4907ada8a2ae37bf
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3304/pi?serverVersion=5.7"
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/pi?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
