--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,3 +4,6 @@
 authentication_token:
     path: /api/login
     methods: ['POST']
+gesdinet_jwt_refresh_token:
+    path:       /api/token/refresh
+    controller: gesdinet.jwtrefreshtoken::refresh
