--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "lexik/jwt-authentication-bundle": "^2.11",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
+        "symfony/asset": "4.4.*",
         "symfony/cache": "4.4.*",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
@@ -26,6 +27,7 @@
         "symfony/proxy-manager-bridge": "4.4.*",
         "symfony/security-bundle": "4.4.*",
         "symfony/serializer": "4.4.*",
+        "symfony/twig-bundle": "4.4.*",
         "symfony/web-server-bundle": "4.4.*",
         "symfony/yaml": "4.4.*"
     },
@@ -79,6 +81,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "nelmio/api-doc-bundle": "^4.3",
         "symfony/maker-bundle": "^1.31",
         "symfony/var-dumper": "4.4.*"
     }
