--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -46,5 +46,6 @@ security:
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/token/refresh, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/users, roles: IS_AUTHENTICATED_ANONYMOUSLY,methods: [POST]}
-        - { path: ^/api/users, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/users, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/inbox, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/api/adoption, roles: IS_AUTHENTICATED_FULLY,methods: [POST]}
