--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -48,5 +48,6 @@ security:
         - { path: ^/api/users, roles: IS_AUTHENTICATED_ANONYMOUSLY,methods: [POST]}
         - { path: ^/api/users, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/inbox, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/image, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/api/notification, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/api/adoption, roles: IS_AUTHENTICATED_FULLY,methods: [POST]}
